<resources>
    <string name="app_name">Orbis</string>
    <string name="action_settings">Settings</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="new_fragment">New memory</string>
    <string name="new_fragment_title">Title</string>
    <string name="new_fragment_title_placeholder">Describe your memory</string>
    <string name="new_fragment_datetime">Date and time</string>
    <string name="new_fragment_date_placeholder">Date</string>
    <string name="new_fragment_time">Time</string>
    <string name="new_fragment_time_placeholder">Time</string>
    <string name="new_fragment_add_button">Add images</string>
    <string name="new_fragment_cancel">Cancel</string>
    <string name="new_fragment_add_memory">Add memory</string>
    <string name="new_fragment_save_memory">Save memory</string>
    <string name="new_fragment_description_placeholder">Add a description</string>
    <string name="login_screen_title">Welcome to Orbis</string>
    <string name="login_screen_email">Email</string>
    <string name="login_screen_password">Password</string>
    <string name="login_screen_login_button">Login</string>
    <string name="login_screen_register_button">Register</string>
    <string name="login_screen_login_attempts">Attempts left:</string>
    <string name="login_screen_forgot_password_button">Forgot your password? Click here</string>
    <string name="register_screen_full_name">Full name</string>
    <string name="register_screen_title">Welcome to Orbis</string>
    <string name="register_screen_username">Username</string>
    <string name="register_screen_email">Email</string>
    <string name="register_screen_confirm_password">Confirm password</string>
    <string name="register_screen_password">Password</string>
    <string name="register_screen_register_button">Register</string>
    <string name="register_screen_check_box">I agree to the Terms of Service</string>
    <string name="register_screen_back_to_login">Already registered? Login here</string>
    <string name="forgot_pw_screen_title">Forgot your Password?</string>
    <string name="forgot_pw_screen_info">No problem! Fill in your Email address that is connected to your account and we will send you an email with a link/ new temporary password.</string>
    <string name="forgot_pw_screen_new_pw">Send</string>
    <string name="forgot_pw_screen_email">Email</string>
    <string name="memory_toolbar_title">Memory</string>
    <string name="memory_menu_share">Share</string>
    <string name="memory_menu_delete">Delete</string>
    <string name="memory_menu_edit">Edit</string>
    <string name="new_fragment_toolbar_title">New memory</string>
    <string name="new_fragment_toolbar_title_edit">Edit memory</string>
    <string name="invite_friend_send_button">Send</string>
    <string name="account_notifications">Notifications</string>
    <string name="followers_followers">Followers</string>
    <string name="following_following">Following</string>
    <string name="membtn_profile">All my memories</string>
    <string name="bio_profile">.........</string>
    <string name="followersbtn_profile">Followers</string>
    <string name="followingbtn_profile">Following</string>
    <string name="fullname_profile">------</string>
    <string name="lastmem_profile">Latest Memory:</string>
    <string name="editbtn_profile">Edit Profile</string>
    <string name="username_main">*********</string>
    <string name="changepassword_text1">Just think of a new password and type it in. After that fill it in again so you know you typed it right.\n\nTap on the button when you are done.</string>
    <string name="changepassword_old">Old password</string>
    <string name="changepassword_new">New password</string>
    <string name="changepassword_newagain">New password (again)</string>
    <string name="help_text1">Write us a detailed story about the problem or tell us what happened and we will see what we can do. Thank you in advance!</string>
    <string name="settings_sendbutton">Send</string>
    <string name="settings_how">How?</string>
    <string name="about_about">About</string>
    <string name="about_text1">With this application we want to give you the opportunity to keep track of all the places you have been in your life and be able to share them without the clumsiness of a physical diary. With the ease of a button you are able to save your memories with your own written story, video\'s and photo\'s if you want!\n\nWhen you get back from that special holiday or trip be sure to look back and recollect all those happy memories.</string>
    <string name="about_ourteam">Our team</string>
    <string name="about_text2">With our team of highly enthusiastic programmers we want to give you the best experience of the app to make sure to give us feedback if you have any.\n\nAs a team we are making this project for a school assignment and are trying our best. We hope you enjoy our efforts and that the app makes you able to enjoy your own trips even more.\n\nSincerely,\nTeam Orbis\n</string>
    <string name="help_report">Report a problem</string>
    <string name="help_text">Write us a detailed story about the problem or tell us what happened and we will see what we can do. Thank you in advance!</string>
    <string name="help_texthere">Type your problem here</string>
    <string name="sendbutton">Send</string>
    <string name="inviteafriend_how">How?</string>
    <string name="inviteafriend_text">Just fill in the email address of the person you want to invite and we will take care of the rest.\n\nYou can even write a little about why you want the person to use our app so they can read your experience with us!</string>
    <string name="inviteafriend_email">Email address</string>
    <string name="inviteafriend_tellthem">Tell them something about the app</string>
    <string name="changepassword_changepasswordbutton">Change password</string>
    <string name="settings_private">Private account</string>
    <string name="settings_invite">Invite friends</string>
    <string name="settings_help">Help</string>
    <string name="settings_about">About</string>
    <string name="settings_general">General</string>
    <string name="settings_account">Account</string>
    <string name="settings_changepassword">Change password</string>
    <string name="settings_signout">Sign out</string>
    <string name="settings_notifications">Notifications</string>
    <string name="bottom_navigation_map">Map</string>
    <string name="bottom_navigation_diary">Diary</string>
    <string name="bottom_navigation_new">New</string>
    <string name="bottom_navigation_search">Search</string>
    <string name="bottom_navigation_account">Account</string>
    <string name="register_screen_toolbar_title">Register to Orbis</string>
    <string name="forgot_pw_screen_toolbar_title">Forgot your password?</string>
    <string name="login_screen_toolbar_title">Login to Orbis</string>
    <string name="opensettingsbutton">opensettingsbutton</string>
    <string name="diary_screen_toolbar_title">Diary</string>
    <string name="search_screen_toolbar_title">Search</string>
    <string name="diary_screen_search">Search for a memory</string>
    <string name="search_screen_search">Search for a person</string>
    <string name="toolbarSettings">Settings</string>
    <string name="API_base_url">"https://api.jariketting.nl/"</string>
    <string name="memory_not_found">Memory not found</string>
    <string name="login_screen_or">OR</string>
    <string name="image_selector_add_image">Add image</string>
    <string name="image_selector_title">Add images</string>
    <!--
    Strings van Dion, worden nog met API veranderd.
    -->
    <string-array name="all_people">
        <item>jarichain</item>
        <item>dionros</item>
        <item>naomivanduijn</item>
        <item>nilsvandop</item>
        <item>pizza</item>
        <item>ben en jerry</item>
        <item>noodles</item>
        <item>cola</item>
    </string-array>
    <string name="change_password_error">Please make sure your password is longer than 1 character and is the same both times</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="EditSave">Save</string>
</resources>
