<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/map"
        android:icon="@drawable/ic_map_black_24dp"
        android:title="@string/bottom_navigation_map" />
    <item
        android:id="@+id/books"
        android:icon="@drawable/ic_library_books_black_24dp"
        android:title="@string/bottom_navigation_diary" />
    <item
        android:id="@+id/add"
        android:icon="@drawable/ic_add_circle_black_24dp"
        android:title="@string/bottom_navigation_new" />
    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/bottom_navigation_search" />
    <item
        android:id="@+id/account"
        android:icon="@drawable/ic_account_circle_black_24dp"
        android:title="@string/bottom_navigation_account" />
</menu>