<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsFragment">

    <android.support.constraint.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SettingsActivity">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="8dp" />

        <Switch
            android:id="@+id/Notificationsslide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/TextNotifications" />

        <Switch
            android:id="@+id/Privateaccountslide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/TextPrivateaccount" />

        <TextView
            android:id="@+id/TextPrivateaccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/settings_private"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/TextNotifications"
            app:layout_constraintTop_toBottomOf="@+id/TextNotifications" />

        <TextView
            android:id="@+id/TextHelp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/settings_help"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/TextInvitefriends"
            app:layout_constraintTop_toBottomOf="@+id/TextInvitefriends" />

        <TextView
            android:id="@+id/TextAccountheadline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="75dp"
            android:text="@string/settings_account"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TextAbout" />

        <TextView
            android:id="@+id/textAccountheadline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="100dp"
            android:text="@string/settings_general"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/TextAbout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:onClick="About"
            android:text="@string/settings_about"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/TextHelp"
            app:layout_constraintTop_toBottomOf="@+id/TextHelp" />

        <TextView
            android:id="@+id/TextSignout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/settings_signout"
            android:textColor="#2196F3"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/TextChangepassword"
            app:layout_constraintTop_toBottomOf="@+id/TextChangepassword" />

        <TextView
            android:id="@+id/TextChangepassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/settings_changepassword"
            android:textColor="#2196F3"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/TextAccountheadline"
            app:layout_constraintTop_toBottomOf="@+id/TextAccountheadline" />

        <TextView
            android:id="@+id/TextInvitefriends"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/settings_invite"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/TextPrivateaccount"
            app:layout_constraintTop_toBottomOf="@+id/TextPrivateaccount" />

        <TextView
            android:id="@+id/TextNotifications"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="20dp"
            android:text="@string/settings_notifications"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/textAccountheadline"
            app:layout_constraintTop_toBottomOf="@+id/textAccountheadline" />
    </android.support.constraint.ConstraintLayout>
</FrameLayout>