<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/allmemButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:background="#003D60"
            android:text="@string/membtn_profile"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/followingButton" />

        <TextView
            android:id="@+id/bioText"
            android:layout_width="365dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/bio_profile"
            android:textColor="#47525E"
            android:textSize="18sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/placeholder_profilepic" />

        <Button
            android:id="@+id/followersButton"
            android:layout_width="0dp"
            android:layout_height="47dp"
            android:layout_marginTop="50dp"
            android:background="#003D60"
            android:text="@string/followersbtn_profile"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bioText" />

        <Button
            android:id="@+id/followingButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:background="#003D60"
            android:text="@string/followingbtn_profile"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/followersButton" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="412dp"
            android:layout_height="61dp"
            android:background="#00AAB7"
            android:orientation="vertical"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </LinearLayout>

        <android.support.constraint.Placeholder
            android:id="@+id/placeholder_profilepic"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <TextView
            android:id="@+id/fullnameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="28dp"
            android:text="@string/fullname_profile"
            android:textColor="#47525E"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/placeholder_profilepic"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <TextView
            android:id="@+id/lastmemText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/lastmem_profile"
            android:textColor="#8492A6"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/allmemButton" />

        <Button
            android:id="@+id/editprofButton"
            android:layout_width="96dp"
            android:layout_height="22dp"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="2dp"
            android:background="#003D60"
            android:text="@string/editbtn_profile"
            android:textColor="#FFFFFF"
            app:layout_constraintStart_toEndOf="@+id/placeholder_profilepic"
            app:layout_constraintTop_toBottomOf="@+id/fullnameText" />

        <ImageButton
            android:id="@+id/setButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:baselineAligned="false"
            app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="@+id/linearLayout"
            app:layout_constraintTop_toTopOf="@+id/linearLayout"
            app:srcCompat="@android:drawable/ic_menu_manage" />

        <TextView
            android:id="@+id/usernameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/username_main"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/linearLayout" />

        <android.support.constraint.Placeholder
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/lastmemText"
            tools:layout_editor_absoluteX="8dp" />
    </android.support.constraint.ConstraintLayout>


</RelativeLayout>
<!--
Voor elk van de verschillende kopjes die in de balk moesten komen heb ik een apart fragment file aangemaakt.
Hierin geef ik onder andere aan welke kleur het scherm moet zijn als de gebruiker het bijbehorende icoon aanklikt, in dit geval paars.

-->
